# kicd-extraction

./: .gitignore  README.md  TODO.md  combine_excels.py  curriculum.db  excel_outputs_combined.xlsx  format.py  llm_extraction.py  main.py  md_creator.py  pyproject.toml  requirements.txt  sanitise.py  sanitised_excel_outputs_combined.xlsx  sanitised_formatted_excel_outputs_combined.xlsx  scrapy.cfg  settings.py  syllabus.json  table_creator.py  test_db_insert.ipynb  test_db_insert.py
demos/: DEMO_CURRICULUM.xlsx
kicd_extraction/: items.py  middlewares.py  pipelines.py  settings.py
kicd_extraction/spiders/: curriculum_spider.py
