[project]
name = "kicd-extraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.3.31",
    "langchain-openai>=0.3.35",
    "langchain-xai>=0.2.5",
    "markitdown>=0.1.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.2",
    "scrapy>=2.13.3",
]
